# generals-bot

./: .gitignore  Cargo.toml
src/: client.rs  main.rs  replays.rs  simulator.rs  state.rs
src/bots/: mod.rs  nn_bot.rs  path_optimization.rs  ppgnet.rs  random_bot.rs  simple_bots.rs  smart_bot.rs  training.rs
src/bots/smart_bot/: actions.rs  mod.rs  path_optimization.rs  strategy.rs
