[package]
name = "generals-bot"
version = "0.1.0"
authors = ["Nathan Koppel <nathankoppel0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand="0.8"
colored="2"
chrono="0.4"
tungstenite="0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
