[package]
name = "generals-bot"
version = "0.1.0"
authors = ["Nathan Koppel <nathankoppel0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"

rand = "0.8"
colored = "2"
chrono = "0.4"
tungstenite = { version = "0.18", features = ["native-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

smallvec = "1.1"

# TODO: change to a stable version of dfdx 
dfdx = { git = "https://github.com/coreylowman/dfdx", features = ["cuda", "numpy", "nightly"] }
